chore: Update swagger docs
